--- a/package.json
+++ b/package.json
@@ -37,7 +37,17 @@
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.7",
     "uuid": "*",
-    "web3": "^1.7.5"
+    "web3": "^1.7.5",
+    "@phala/sdk": "^0.3.5-beta.10",
+    "@phala/typedefs": "^0.2.32",
+    "@polkadot/api": "^9.8.1",
+    "@polkadot/api-contract": "^9.8.1",
+    "@polkadot/extension-dapp": "^0.44.6",
+    "@polkadot/keyring": "^10.1.11",
+    "@polkadot/react-identicon": "^2.9.14",
+    "@polkadot/util": "^10.1.11",
+    "@polkadot/util-crypto": "^10.1.11",
+    "@polkadot/wasm-crypto": "6.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
